👨🏻‍💻Work on the new section is began

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,7 @@
 
 :root {
   --background: oklch(1 0 0);
+  --background-gray: oklch(0.96 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -83,6 +84,7 @@
 
 .dark {
   --background: oklch(0.145 0 0);
+  --background-gray: oklch(0.96 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.145 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -270,4 +272,8 @@ body {
 
 .font-bold {
   font-weight: 700;
+}
+
+.bg-sonic-gray {
+  background-color: #FAFAFA;
 }
